
2013-09-04  Ryuan Choi (ryuan)

        * elm_config : profile may be broken when clicked reset button in profiles tab

2013-09-07  Shinwoo Kim

        * elm_access : delete access object in job when its hover object is deleted

2013-09-10  Niraj Kumar

        * ProgressBar: Added support for more than one progress status  in  a
          single progress bar

2013-09-10  Ryuan Choi (ryuan)

        * elc_fileselector : Navigate (if needed) and select file with "selected"
        signal when user typed file path on path_entry.

2013-09-10  Jose Roberto de Souza (zehortigoza)

        * table : Introduce elm_table_child_get() API.

2013-09-11  Daniel Juyung Seo (SeoZ)

        * flip : Added support for focus direction.

2013-09-12  Ryuan Choi (ryuan)

        * elc_fileselector : Added "selected,invalid" smart callbacks.

2013-09-12  ChunEon Park (Hermet)

        * elm_object_item : Introduces new APIs, elm_object_item_track(),
        elm_object_item_untrack(), elm_object_item_track_get().

2013-09-14  Daniel Juyung Seo (SeoZ)

        * spinner : fixed arrow key focus movement bug.

2013-09-15  Daniel Juyung Seo (SeoZ)

        * flip : set the focus to it's content object when flip go to is called
        while flip is focused.

2013-09-18  Tom Hacohen (TAsn)

        * Gesture layer: Fix gesture layer with "pointer" events.

2013-09-18  Michael Bouchaud (yoz)

        * Elm_Widget_Item: Introduces new widget APIs,
        elm_widget_item_part_text_custom_set(),
        elm_widget_item_part_text_custom_get(),
        elm_widget_item_part_text_custom_update()

2013-09-21  Daniel Juyung Seo (SeoZ)

        * hover: added "dismissed" callback.

2013-09-21  Daniel Juyung Seo (SeoZ)

        * menu: added "dismissed" callback.

2013-09-21  Daniel Juyung Seo (SeoZ)

        * menu: added elm_menu_item_subitems_clear.

2013-09-27  ChunEon Park (Hermet)

        * layout: fixed the layout to swallow the contents again when theme is changed.